fix alignment of columns on the web page

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@ img {
   height: 30%;
   width: 30%;
 }
-h1 {
+h2 {
   font-style: italic;
   font-size: 50px;
   text-align: center;
@@ -15,6 +15,7 @@ p {
   font-size: 20px;
   font-family: Tahoma;
   font-weight: bolder;
+  font-style: italic;
 }
 .column {
   width: 400px;
@@ -26,12 +27,24 @@ p {
 }
 a {
   color: hotpink;
+  font-style: italic;
+  font-weight: bolder;
 }
 .links {
   float:right;
   width: 400px;
   border: 3px hotpink solid;
+  border-radius: 30px;
+  position: relative;
+  bottom: 400px;
 }
-.column .about-me {
-  float: right;
+#profile-photo: {
+  width: 300px;
+}
+#heading {
+  font-size: 30px;
+  color: white;
+  font-style: italic;
+  font-family: sans-serif;
+  text-align: center;
 }
